                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-08-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 15-08-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 15-08-2005 updated: Italian language file (Thnx to kotix)
 - 15-08-2005 updated: German language file
 - 15-08-2005 added: A message box is now shown when a share is not available or its configuration is wrong
 - 15-08-2005 fixed: Missed yet another newline in Database.cpp.  Another possible database fix?
 - 14-08-2005 changed: improved ability to cancel mplayer startup
 - 14-08-2005 changed: made progressdialogs display when it's canceled state
 - 14-08-2005 fixed: window resources not being loaded sometimes (black screens)
 - 14-08-2005 fixed: [ 1258328 ] HD Spindown feature broken/Hard drive spins up on standard operations
 - 14-08-2005 fixed: parsing of somewhat corrupt pls files.
 - 14-08-2005 fixed: [ 1255929 ] UTF-8 in Vorbis tags isn't handled properly
 - 14-08-2005 fixed: subtitles could lockup on first display (second fix, first was broken)
 - 13-08-2005 fixed: xbmc would often crash when opening OSD while subtitles was visible
 - 12-08-2005 fixed: Mute icon dialog would always stay on screen if XBMC started with volume at minimum
 - 12-08-2005 updated: build.bat so it's a bit more universal. (Thx to Pade2)
 - 11-08-2005 fixed: xbmc could deadlock if mplayer called flippage before having rendered anything
 - 11-08-2005 fixed: Chroma channel when syncing interlaced material was 1/4th of a pixel off.
 - 11-08-2005 changed: All interlacing/deinterlacing is now handled combined in OSD and saved in video db.