@@ -1,10 +1,8 @@
-
 #include "../stdafx.h"
 #include <ConIo.h>
 #include "FanController.h"
 #include "../xbox/undocumented.h"
 #include "../xbox/XKExports.h"
-#include "SystemInfo.h"
 
 
 #define PIC_ADDRESS      0x20
@@ -42,6 +40,8 @@ CFanController::CFanController()
   systemFanSpeed = GetFanSpeed();
   currentFanSpeed = systemFanSpeed;
   calculatedFanSpeed = systemFanSpeed;
+  unsigned long iDummy;
+  bIs16Box = (HalReadSMBusValue(XCALIBUR_ADDRESS, 0, 0, (LPBYTE)&iDummy) == 0);
 }
 
 
@@ -99,8 +99,7 @@ void CFanController::RestoreStartupSpeed()
   SetFanSpeed(systemFanSpeed);
   Sleep(100);
   //if it's not a 1.6 box disable custom fanmode
-  int iDummy;
-  if (HalReadSMBusValue(XCALIBUR_ADDRESS, 0, 0, (LPBYTE)&iDummy) != 0)
+  if (!bIs16Box)
   {
     //disable custom fanmode
     HalWriteSMBusValue(PIC_ADDRESS, FAN_MODE, 0, 0);
@@ -168,15 +167,16 @@ float CFanController::GetGPUTemp()
 
 void CFanController::GetGPUTempInternal()
 {
-  HalReadSMBusValue(PIC_ADDRESS, GPU_TEMP, 0, (LPBYTE)&fGPUTemp);
+  unsigned long temp;
+  HalReadSMBusValue(PIC_ADDRESS, GPU_TEMP, 0, (LPBYTE)&temp);
 
-  CStdString strXboxVer;
-  SYSINFO::GetXBOXVersionDetected(strXboxVer);
-  if (strXboxVer == "v1.6") 
-  { // The XBOX v1.6 shows the temp to high! Let's recalc it! It will only do ~minus 10 degress
-     gpuTemp = ((float)fGPUTemp * 0.8f);
+  gpuTemp = (float)temp;
+  // The XBOX v1.6 shows the temp to high! Let's recalc it! It will only do ~minus 10 degress
+  if (bIs16Box)
+  {
+    gpuTemp *= 0.8f;
   }
-  else gpuTemp = fGPUTemp;
+
 }
 
 float CFanController::GetCPUTemp()
@@ -208,15 +208,11 @@ void CFanController::GetCPUTempInternal()
   while ((_inp(0xc000) & 8));
   cpudec = _inpw(0xc006);
 
-  CStdString strXboxVer;
-  SYSINFO::GetXBOXVersionDetected(strXboxVer);
-  if (strXboxVer == "v1.6") 
-  { // The XBOX v1.6 shows the temp to high! Let's recalc it! it will only do ~minus 10 degress
-    cpuTemp = ((float)cpu + (float)cpudec / 256.0f )* 0.8f;
-  }
-  else
-  { // else let's show then the normal Temp!
-    cpuTemp = (float)cpu + (float)cpudec / 256.0f;
+  cpuTemp = (float)cpu + (float)cpudec / 256.0f;
+  // The XBOX v1.6 shows the temp to high! Let's recalc it! it will only do ~minus 10 degress
+  if (bIs16Box)
+  {
+    cpuTemp *= 0.8f;
   }
 
 }
